@@ -23,11 +23,12 @@ New features:
 OpenSearchServer 1.2.4
 
 New features:
-- 3482151: Monitor API response gives error
+- 3482284: LimitInputStream should be buffered
 - 3477836: A separated error log for the parser	
 - 3469777: Scored snippets
 
 Bug fixes:
+- 3482151: Monitor API response gives error
 - 3479649: SetField and DeleteField API don't update config.xml
 - 3479548: Report log files are truncated
 - 3476578: UTF-8 character as separator in snippet field
